--- a/Pages/admin.html
+++ b/Pages/admin.html
@@ -23,6 +23,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Administración</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -36,7 +39,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
                   <h3>Henri Fayol</h3>
-                  <p>considerado uno de los padres de la administración moderna, fue un ingeniero y teórico francés que desarrolló importantes aportaciones en la administración de empresas. </p>
+                  <p class="ms-3">considerado uno de los padres de la administración moderna, fue un ingeniero y teórico francés que desarrolló importantes aportaciones en la administración de empresas. </p>
                 </div>
             </div>
         </section>
