--- a/Pages/DiaMuertos.html
+++ b/Pages/DiaMuertos.html
@@ -19,10 +19,13 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../Pages/admin.html">Administración</a>
                   </li>
                 </ul>
               </div>
