--- a/Pages/mercadotecnia.html
+++ b/Pages/mercadotecnia.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ECA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/styleMuertos.css">
   </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-              <a class="navbar-brand" href="#">ECA</a>
+              <a class="navbar-brand" href="../index.html">ECA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -24,10 +24,7 @@
                     <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Pages/admin.html">Administración</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./Pages/mercadotecnia.html">Mercadotecnia</a>
+                    <a class="nav-link" href="#">Administración</a>
                   </li>
                 </ul>
               </div>
@@ -36,30 +33,30 @@
     </header>
     <main>
         <section>
-            <div class="section">
-                <div class="row">
-                    <div class="col-lg-5 col-md-4 col-sm-3">
-                        <h2>ECA</h2>
-                        <p>¿Quienes somos?</p>
-                        <p>
-                          En nuestra carrera, nos dedicamos a formar mercadólogos con una sólida base de conocimientos sobre el mercado y sus requerimientos. A través del uso de herramientas tecnológicas avanzadas, preparamos a nuestros estudiantes para identificar necesidades específicas y desarrollar estrategias de mercadotecnia efectivas que satisfagan dichas demandas. Nuestro enfoque práctico y teórico garantiza que nuestros graduados estén listos para enfrentar los desafíos del mundo empresarial y contribuir al crecimiento de las organizaciones.
-                        </p>
-                    </div> 
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-12">
+                    <img src="../img/muertos/David-Ogilvy-lists.jpg" alt="" class="img-fluid">
+                </div>
+                <div class="col-lg-6 col-md-6 col-12">
+                    <h3>David Ogilvy</h3>
+                    <p class="ms-3">conocido como el "padre de la publicidad", hizo importantes contribuciones al mundo del marketing y la publicidad. Algunas de sus aportaciones más destacadas incluyen:</p>
                 </div>
             </div>
         </section>
-        <div class="section">
-            <div class="row">
-                <div class="col">
-                    <a href="./Pages/DiaMuertos.html">
-                        <button class="boton">
-                            Día de Muertos
-                        </button>
-                    </a>
-                </div>
+    </main>
+    <section>
+        <div class="row">
+            <div class="col">
+                <ul>
+                    <li>Investigación de mercado Ogilvy enfatizó la importancia de entender al consumidor a través de la investigación. Creía que conocer al público objetivo era fundamental para crear campañas efectivas.</li>
+                    <li>Creatividad basada en datos: Aunque valoraba la creatividad, promovió la idea de que las decisiones publicitarias deben basarse en datos y análisis, no solo en instinto.</li>
+                    <li> Redacción persuasiva: Escribió el famoso libro "Confessions of an Advertising Man", donde compartió principios sobre cómo escribir anuncios atractivos y persuasivos, destacando la importancia de los titulares.</li>
+                    <li>Branding: Ogilvy fue pionero en la creación y gestión de marcas. Defendía que las marcas deben tener una personalidad coherente y distintiva.</li>
+                    <li>Ética en la publicidad: Abogó por la honestidad en la publicidad, sugiriendo que las marcas deben cumplir sus promesas para construir confianza con los consumidores.</li>
+                </ul>
             </div>
         </div>
-    </main>
+    </section>
     <hr>
     <footer class="text-center">
         <p>&copy; 2024 - Celebrando nuestras tradiciones mexicanas</p>
