--- a/Pages/DiaMuertos.html
+++ b/Pages/DiaMuertos.html
@@ -22,10 +22,16 @@
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
+                    <a class="nav-link" href="../Pages/DiaMuertos.html">Ofrenda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/" target="_blank">UMP</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../Pages/admin.html">Administración</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../Pages/mercadotecnia.html">Mercadotecnia</a>
                   </li>
                 </ul>
               </div>
@@ -41,10 +47,10 @@
                 data-aos-duration="3000">
                     <p class="texto">El Día de Muertos es una tradición mexicana que honra a los seres queridos fallecidos. Los altares son un elemento fundamental para recordar y celebrar la vida de quienes ya no están con nosotros.</p>
                 </div>
-                <div class="col-lg-6 col-md-6 col-ms-12" data-aos="fade-down"
+                <div class="col-lg-6 col-md-6 col-ms-12 d-flex justify-content-center" data-aos="fade-down"
                 data-aos-easing="linear"
                 data-aos-duration="1500">
-                    <img src="../img/muertos/dia-de-muertos1.webp" alt="" class="img-fluid imagen">
+                    <img src="../img/muertos/dia-de-muertos1.webp" alt="" class="img-fluid imagen imagen">
                 </div>
             </div>
         </section>
@@ -52,8 +58,13 @@
         <section>
             <div class="row">
                 <h2>Niveles del Altar</h2>
-                <div class="col-lg-6 col-md-6 col-ms-12"></div>
-                <div class="col-lg-6 col-md-6 col-ms-12">
+                <div class="col-lg-6 col-md-6 col-ms-12 d-flex justify-content-center" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="1500">
+                  <img src="../img/Niveles.jpeg" alt="" class="img-fluid imagen">
+                </div>
+                <div class="col-lg-6 col-md-6 col-ms-12" data-aos="fade-up"
+                data-aos-duration="3000">
                     <p>Los altares tradicionales pueden tener diferentes niveles, cada uno con un simbolismo particular:</p>
                     <ul>
                         <li><strong>2 niveles:</strong> Representa el cielo y la tierra.</li>
@@ -67,7 +78,8 @@
         <section>
             <div class="row">
                 <h2>Elementos del Altar</h2>
-                <div class="col-lg-6 col-md-6 col-ms-12">
+                <div class="col-lg-6 col-md-6 col-ms-12 " data-aos="fade-up"
+                data-aos-duration="3000">
                     <p>Estos son los elementos comunes que se incluyen en el altar y su significado:</p>
                     <ul>
                         <li><strong>Fotografía:</strong> Representa al ser querido que se honra en el altar.</li>
@@ -81,7 +93,11 @@
                         <li><strong>Incienso o copal:</strong> Limpia y purifica el ambiente para recibir a las almas.</li>
                     </ul>
                 </div>
-                <div class="col-lg-6 col-md-6 col-ms-12"></div>
+                <div class="col-lg-6 col-md-6 col-ms-12 d-flex justify-content-center" data-aos="fade-down"
+                data-aos-easing="linear"
+                data-aos-duration="1500">
+                <img src="../img/elementos.jpeg" alt="Elementos" class="img-fluid imagen">
+              </div>
             </div>
         </section>
         <!-- Sección: Simbolismo del Color -->
