--- a/Pages/mercadotecnia.html
+++ b/Pages/mercadotecnia.html
@@ -18,13 +18,20 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="../Pages/DiaMuertos.html">Ofrenda</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
+                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/" target="_blank">UMP</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Administración</a>
+                    <a class="nav-link" href="../Pages/admin.html">Administración</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Mercadotecnia</a>
                   </li>
                 </ul>
               </div>
@@ -34,8 +41,8 @@
     <main>
         <section>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <img src="../img/muertos/David-Ogilvy-lists.jpg" alt="" class="img-fluid">
+                <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center">
+                    <img src="../img/muertos/David-Ogilvy-lists.jpg" alt="David-Ogilvy-lists" class="img-fluid">
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
                     <h3>David Ogilvy</h3>
