--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
+                    <a class="nav-link" href="./Pages/DiaMuertos.html">Ofrenda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/" target="_blank">UMP</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./Pages/admin.html">Administración</a>
@@ -39,7 +42,7 @@
             <div class="section">
                 <div class="row">
                     <div class="col-lg-5 col-md-4 col-sm-3">
-                        <h2>ECA</h2>
+                        <h1>ECA</h1>
                         <p>¿Quienes somos?</p>
                         <p>
                           En nuestra carrera, nos dedicamos a formar mercadólogos con una sólida base de conocimientos sobre el mercado y sus requerimientos. A través del uso de herramientas tecnológicas avanzadas, preparamos a nuestros estudiantes para identificar necesidades específicas y desarrollar estrategias de mercadotecnia efectivas que satisfagan dichas demandas. Nuestro enfoque práctico y teórico garantiza que nuestros graduados estén listos para enfrentar los desafíos del mundo empresarial y contribuir al crecimiento de las organizaciones.
