--- a/Pages/admin.html
+++ b/Pages/admin.html
@@ -18,13 +18,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/">ECA</a>
+                    <a class="nav-link" href="../Pages/DiaMuertos.html">Ofrenda</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://universidadmotoliniadelpedregal.com/" target="_blank">UMP</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Administración</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../Pages/mercadotecnia.html">Mercadotecnia</a>
                   </li>
                 </ul>
               </div>
@@ -34,8 +40,8 @@
     <main>
         <section>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <img src="../img/muertos/fayol.jpg" alt="" class="img-fluid">
+                <div class="col-lg-6 col-md-6 col-12 d-flex justify-content-center">
+                    <img src="../img/muertos/fayol.jpg" alt="" class="img-fluid imagen">
                 </div>
                 <div class="col-lg-6 col-md-6 col-12">
                   <h3>Henri Fayol</h3>
