--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section>
             <div class="section">
                 <div class="row">
-                    <div class="col-lg-5 col-md-4 col-sm-3">
+                    <div class="col-lg-5 col-md-4 col-sm-5">
                         <h1>ECA</h1>
                         <p>¿Quienes somos?</p>
                         <p>
@@ -62,6 +62,9 @@
                 </div>
             </div>
         </div>
+        <section class="fondo">
+
+        </section>
     </main>
     <hr>
     <footer class="text-center">
